<resources>
    <string name="app_name">EX_GUESTS_2021</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">ALL GUESTS</string>
    <string name="menu_presents">Presents</string>
    <string name="menu_absents">Absents</string>
    <string name="name">Nome</string>
    <string name="confirmation">Confirmação</string>
    <string name="present">Presente</string>
    <string name="absent">Ausente</string>
    <string name="SAVE">Salvar</string>
</resources>