<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".GuestFormActivity">

    <TextView
        android:id="@+id/text_guestName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/guestNameValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_guestName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/text_Confirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmation"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guestNameValue"
        />

    <RadioGroup
        android:id="@+id/rg_presence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Confirmation">

        <RadioButton
            android:id="@+id/rb_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/present"
            />
        <RadioButton
            android:id="@+id/rb_absent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absent"
            />


    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SAVE"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>